src/objects/JO_Status__c.object
<CustomObject>
    <fields>
        <fullName>InAct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Task__c</fullName>
        <description>This text field will hold standard activity ID</description>
        <externalId>true</externalId>
        <label>Notification Task</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notifications__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notifications</label>
        <referenceTo>Notifications__c</referenceTo>
        <relationshipName>Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Operation</label>
        <referenceTo>Order_Operation__c</referenceTo>
        <relationshipLabel>JO Statuses</relationshipLabel>
        <relationshipName>JO_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>JO Statuses</relationshipLabel>
        <relationshipName>JO_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUBM</fullName>
                </value>
                <value>
                    <fullName>UNSE</fullName>
                </value>
                <value>
                    <fullName>ERDY</fullName>
                </value>
                <value>
                    <fullName>ESTS</fullName>
                </value>
                <value>
                    <fullName>ADER</fullName>
                </value>
                <value>
                    <fullName>APPR</fullName>
                </value>
                <value>
                    <fullName>PEND</fullName>
                </value>
                <value>
                    <fullName>UNSC</fullName>
                </value>
                <value>
                    <fullName>SRDY</fullName>
                </value>
                <value>
                    <fullName>CRDY</fullName>
                </value>
                <value>
                    <fullName>CONS</fullName>
                </value>
                <value>
                    <fullName>DOCC/DCNL</fullName>
                </value>
                <value>
                    <fullName>MAPP/MPNL</fullName>
                </value>
                <value>
                    <fullName>FICL</fullName>
                </value>
                <value>
                    <fullName>NAS</fullName>
                </value>
                <value>
                    <fullName>NASP</fullName>
                </value>
                <value>
                    <fullName>ACCD</fullName>
                </value>
                <value>
                    <fullName>CNCL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>JO Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Notification_Task__c</columns>
        <columns>Status__c</columns>
        <columns>Notifications__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Notifications__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Obj Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JO Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>